# nget

./: .cvsignore  .depend  .gitignore  .ngetrc  Changelog  FAQ  Makefile  Makefile.in  README  README.mingw32  README.win32  TODO  _fileconf.h  _hash_map.h  _sstream.h  _subconf.h  acconfig.h  aclocal.m4  argparser.cc  argparser.h  auto_map.h  auto_vector.h  autogen.sh  buffy.h  buffysock.h  cache.cc  cache.h  cfgfile.cc  cfgfile.h  config.h  configure.in  datfile.cc  datfile.h  decode.cc  decode.h  dupe_file.cc  dupe_file.h  etree.cc  etree.h  file.cc  (+58 more)
compat/: .cvsignore  Makefile.in  fake-getaddrinfo.c  fake-getaddrinfo.h  fake-getnameinfo.c  fake-getnameinfo.h  socketheaders.h
debian/: changelog  control  copyright  docs  examples  rules
par2/: .cvsignore  Makefile.in  commandline.cpp  commandline.h  creatorpacket.cpp  creatorpacket.h  criticalpacket.cpp  criticalpacket.h  datablock.cpp  datablock.h  descriptionpacket.cpp  descriptionpacket.h  diskfile.cpp  diskfile.h  mainpacket.cpp  mainpacket.h  md5.h  par1fileformat.h  par1repairer.cpp  par1repairer.h  par2cmdline.h  par2fileformat.h  par2repairer.cpp  par2repairer.h  recoverypacket.cpp  recoverypacket.h  verificationhashtable.h  verificationpacket.cpp  verificationpacket.h
test/: .cvsignore  Makefile.in  TestRunner.cc  auto_container_test.cc  dumbnntpd.py  dupe_file_test.cc  dupe_file_test.h  knapsack_test.cc  misc_test.cc  misc_test.h  ngetf.py  nntpd.py  nrangetest.cc  nrangetest.h  rcount_test.cc  rcount_test.h  stress.py  stressg.py  strtoker_test.cc  strtoker_test.h  test_nget.py  util.py
test/testdata/0001/_yenc_multi_save_binary_info_output/: 1015781891.0.txt
test/testdata/0001/_yenc_single_withtext_output/: 1004188064.0.txt
test/testdata/0001/uuencode_multi_uudumbness/: 001  002
test/testdata/0001/uuencode_single/: testfile.001
test/testdata/0001/uuencode_single_quoted/: 001
test/testdata/0001/uuenview_uue_mime_single/: 001
test/testdata/0001/yenc_multi/: 002
test/testdata/0001/yenc_multi_crc32_error/: 001  002
test/testdata/0001/yenc_multi_pcrc32_error/: 001
test/testdata/0001/yenc_multi_size_error/: 001  002
test/testdata/0001/yenc_single/: 00000005.ntx
test/testdata/0001/yenc_single_crc32_error/: 00000005.ntx
test/testdata/0001/yenc_single_rawtabs/: 00000005.ntx
test/testdata/0001/yenc_single_size_error/: 00000005.ntx
test/testdata/0001/yenc_single_withtext/: 00000005.ntx
test/testdata/0002/_par2_output/: joystick.par2  joystick.vol00+1.par2  joystick.vol01+2.par2  joystick.vol03+4.par2  joystick.vol07+8.par2
test/testdata/0002/par2/: par  par1  par2  par3  par4
test/testdata/0002/uuencode_multi/: 001  002
test/testdata/0002/uuencode_multi3/: 001  002  003
test/testdata/0002/uuenview_uue_mime_multi/: 001  002
test/testdata/0002/yenc_multi/: 00000021.ntx
test/testdata/0002/yenc_multi3/: 001  002  003
test/testdata/0003/_output/: 1015503729.0.txt
test/testdata/0003/newspost_uue_0/: 001  002
test/testdata/0004/_output/: 1023488289.0.txt
test/testdata/0005/_output/: test2.txt
test/testdata/0005/input/: 001
test/testdata/longheader/input/: 000
test/testdata/longheader254/input/: foog
test/testdata/mbox01/_output/: nget.mbox
test/testdata/mbox01/input/: 001  002
test/testdata/mergesa01/_output/: 1023488352.0.txt
test/testdata/mergesa01/input/: 001
test/testdata/par01/_corrupt_pxxs_output/: a b.p01  a b.p03
test/testdata/par01/_notpxxs_output/: a b.p01
test/testdata/par01/_output/: a b.p01  a b.p02  a b.p03  a b.p04  a b.p05  a b.p06  a b.par
test/testdata/par01/_reply_output/: 1041725934.0.txt
test/testdata/par01/corrupt_input/: dat2  dat4
test/testdata/par01/corrupt_pxxs/: par1  par3
test/testdata/par01/input/: dat1  dat2  dat3  dat4  dat5  par  par1  par2  par3  par4  par5  par6
test/testdata/par01/multipart/: par1-1  par1-2
test/testdata/par01/notpxxs/: par1  par2
test/testdata/par01/samesubject_input/: dat1  dat2  dat3  dat4  dat5
test/testdata/par02/0file/: zero1
test/testdata/par02/_a_b_par_output/: a b.p03  a b.p04  a b.p06  a b.par
test/testdata/par02/_c_d_par2_output/: c d.par2  c d.vol01+02.par2
test/testdata/par02/_output/: p2.p01  p2.p02  p2.p05
test/testdata/par02/_par2_0file_output/: 1059095652.0.txt
test/testdata/par02/_par2_output/: p2.vol0+1.par2  p2.vol3+2.par2
test/testdata/par02/a_b_par_input/: par  par1  par2  par3  par4  par5  par6
test/testdata/par02/c_d_par2_input/: par  par1  par2  par3
test/testdata/par02/case_input/: dat4  dat5
test/testdata/par02/input/: dat1  dat2  dat3  dat4  dat5  par  par1  par2  par3  par4  par5  par6
test/testdata/par02/par2_input/: par  par1  par2  par3  par~
test/testdata/par2-01/_corrupt_mainpkt_output/: c d.par2
test/testdata/par2-01/_corrupt_pxxblocks_output/: c d.vol03+04.par2
test/testdata/par2-01/_corrupt_pxxs_output/: c d.vol01+02.par2  c d.vol03+04.par2
test/testdata/par2-01/_corrupt_sethash_output/: foo.vol01+02.par2
test/testdata/par2-01/_incomplete_multipart_output/: c d.vol03+04.par2
test/testdata/par2-01/_missing_filedescpkt_output/: c d.par2
test/testdata/par2-01/_missing_ifscpkt_output/: c d.par2
test/testdata/par2-01/_output/: c d.par2  c d.vol00+01.par2  c d.vol01+02.par2  c d.vol03+04.par2  c d.vol07+08.par2  c d.vol15+16.par2
test/testdata/par2-01/_splitfile_output/: c d 05.dat.000  c d 05.dat.001  c d 05.dat.002  c d 05.dat.003
test/testdata/par2-01/_weirdcase_output/: C D.voL00+01.paR2  C D.vol03+04.PAr2  C d.pAr2  C d.vOl07+08.Par2  C d.vol01+02.par2  c D.vOl15+16.PaR2
test/testdata/par2-01/corrupt_input/: dat2  dat4
test/testdata/par2-01/corrupt_inputblock/: dat5
test/testdata/par2-01/corrupt_mainpkt/: par
test/testdata/par2-01/corrupt_pxxblocks/: par3
test/testdata/par2-01/corrupt_pxxs/: par2  par3
test/testdata/par2-01/corrupt_sethash/: par2
test/testdata/par2-01/input/: dat1  dat4  dat5  par  par1  par2  par3  par4  par5
test/testdata/par2-01/missing_filedescpkt/: par
test/testdata/par2-01/missing_ifscpkt/: par
test/tricks/: ExitStatusTrick.py  IOErrorTrick.py
(+40 files in other folders)
