dnl Process this file with autoconf to produce a configure script.
AC_INIT(nget.cc)
AC_CONFIG_HEADER(config.h)    

AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
dnl AC_PROG_MAKE_SET

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h getopt.h slist.h hash_map.h)

dnl Checks for libraries.
dnl Replace `main' with a function in -lz:
usez=yes
AC_ARG_WITH(zlib,
[ --without-zlib          Don't use zlib.  Faster loading/quiting, but uses
                          much more space],
	if test "$withval" = "no"; then
		usez=no
	fi
)
if test "$usez" = "yes"; then
	AC_CHECK_LIB(z, gzopen)
fi
if test -d uulib; then 
	UUDIR=uulib
	uumanual=yes
else
	uumanual=no
fi
AC_ARG_WITH(uulib,
[ --with-uulib=UULIBDIR    specify dir containing uulib headers and libuu.a, if
                           not specified, configure will check in system dirs.],
	if test "$withval" != "no"; then
		UUDIR=$withval
	fi
	uumanual=yes
)

if test "$uumanual" = "yes"; then
	UUINC=-I$UUDIR
	UULIB=$UUDIR/libuu.a
	AC_DEFINE(HAVE_LIBUU)
else
	NOUU=#
	AC_CHECK_LIB(uulib, UUInitialize)
	if test "$ac_cv_lib_uulib_UUInitialize" != "yes"; then
		AC_CHECK_LIB(uu, UUInitialize)
	fi
	AC_CHECK_HEADERS(uudeview.h)
fi

AC_SUBST(NOUU)
AC_SUBST(UUINC)
AC_SUBST(UUDIR)
AC_SUBST(UULIB)

AC_ARG_ENABLE(filecompare,
[--disable-filecompare     Do not test to see if a duplicate downloaded file is
                           the same as the original, keep all duplicates.],
	if test "$enableval" != "no"; then
		AC_DEFINE(USE_FILECOMPARE)
	fi
,
		AC_DEFINE(USE_FILECOMPARE)
)
AC_ARG_ENABLE(short-tempnames,
[--disable-short-tempnames  Use longer file names for temporary files.  More 
                           descriptive, but also takes up much more screen
                           space.  Also removes the ability to grab parts of a
                           file on one server and other parts on a different
                           server.],
	if test "$enableval" != "no"; then
		AC_DEFINE(SHORT_TEMPNAMES)
	fi
,
		AC_DEFINE(SHORT_TEMPNAMES)
)
AC_ARG_ENABLE(checksum,
[ --enable-checksum=method  Set which method to use for comparing headers and
                           for short-tempnames.  Either crc32 or adler32.
                           default is crc32, as it seems to get less repeated
                           values, however adler32 is said to be faster.  It
                           probably doesn't make much difference.
 --disable-checksum        Disable usage of checksums for comparing headers as
                           well as for short-tempnames, uses STL hash function
						   instead.],
	if test "$enableval" != "no"; then
		if test "$enableval" != "yes"; then
			AC_DEFINE_UNQUOTED(CHECKSUM,$enableval)
		else
			AC_DEFINE(CHECKSUM,crc32)
		fi
	fi
,
	AC_DEFINE(CHECKSUM,crc32)
)

dnl AC_ARG_ENABLE(debug_cache,
dnl [ --enable-debug_cache     Enable consistancy checks when loading and saving header cache],
dnl 	if test "$enableval" != "no"; then
dnl 		AC_DEFINE(DEBUG_CACHE)
dnl 	fi
dnl )
dnl AC_ARG_ENABLE(text_cache,
dnl [ --disable-text_cache     Use binary header cache instead of text (slightly 
dnl                            smaller and slower)],
dnl 	if test "$enableval" != "no"; then
dnl 		AC_DEFINE(TEXT_CACHE)
dnl 	fi
dnl ,
dnl 		AC_DEFINE(TEXT_CACHE)
dnl )


dnl checks for socklen_t
SOCK_CHECK_TYPE(socklen_t, int)

dnl checks for socklen_t
AC_CHECK_TYPE(ulong, unsigned long)

dnl see if timezone is an int
MY_DECL_TIMEZONE

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_UTIME_NULL
dnl AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mkdir mktime regcomp select socket strerror strstr strtol strtoul atoul asprintf vasprintf vdprintf getservbyname_r gethostbyname_r localtime_r getopt_long)

AC_OUTPUT(Makefile,[echo timestamp > stamp-h])
